# MBE_Toolkit

./: .gitignore  Dynamics.py  Logger.py  Potential.py  README.md  plot_output_helper.py  setup.py
potentials/: pot_ttm.tgz
potentials/MBX_20200325_v0.2.2a/: README.md  compile.sh
potentials/MBX_20200325_v0.2.2a/src/bblock/: sys_tools.cpp
potentials/MBX_20200325_v0.2.2a/src/potential/: CMakeLists.txt
potentials/MBX_20200325_v0.2.2a/src/potential/1b/: CMakeLists.txt  energy1b.cpp  energy1b.h
potentials/MBX_20200325_v0.2.2a/src/potential/2b/: CMakeLists.txt  energy2b.cpp  energy2b.h
potentials/MBX_20200325_v0.2.2a/src/potential/3b/: CMakeLists.txt  energy3b.cpp  energy3b.h
potentials/MBX_20200325_v0.2.2a/src/tests/: CMakeLists.txt
potentials/f2py_binding_ttm/pot_ttm/: Makefile  W20_test.xyz  dfpmin.f90  init_ttm3f.f90  main.f90  main.x  master.100.txt  model_mod.f90  potential_mod.f90  read_conf.f90  test_ttm_from_f2py.py  ttm2f_mod.f90  ttm3f_mod.f90
py-MD/: Gradient_Descent.py  MBE_Dynamics.py  Potential.py
pyMD/: Integrator.py  MBE_Dynamics.py  MBE_Potential.py  Potential.py
src/: .Fragments.py.swp  .MBE_Potential.py.swp  .Potential.py.swp  Composite_Potential.py  Fragments.py  Gradient_Descent.py  Interfaces.py  MBE_Potential.py  Potential.py  test.py
src/data/: .W20_global_minimum_ttm21f.xyz.swp  .W20_global_minimum_ttm21f_fragmented.xyz.swp  W20_global_minimum_ttm21f.xyz  W20_global_minimum_ttm21f_fragmented.xyz
utils/: Correlation_Functions.py  correlation_functions.jl  parse_pyMD_output.py  read_xyz.jl  test_vacf.jl
